<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title3"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/opensansbold"
            android:gravity="center"
            android:text="@string/jenis_produk"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055" />

        <ImageView
            android:id="@+id/jenis1"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/jenis1"
            app:layout_constraintBottom_toTopOf="@+id/textJenis1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title3"
            app:layout_constraintVertical_bias="0.836" />

        <TextView
            android:id="@+id/textJenis1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/opensansbold"
            android:text="@string/bucket"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/jenis2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/jenis2"
            android:layout_width="220dp"
            android:layout_height="110dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/jenis2"
            app:layout_constraintBottom_toTopOf="@+id/textJenis2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textJenis2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/opensansbold"
            android:text="@string/cake"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/jenis3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/jenis3"
            android:layout_width="230dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/jenis3"
            app:layout_constraintBottom_toTopOf="@+id/textJenis3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textJenis3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="112dp"
            android:fontFamily="@font/opensansbold"
            android:text="@string/gift_box"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>